--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
     "grunt-concurrent": "~0.4.1",
-    "grunt-bump": "0.0.11",
-    "grunt-conventional-changelog": "~1.0.0"
+    "grunt-conventional-changelog": "~1.0.0",
+    "grunt-push-release": "~0.1.1"
   },
   "engines": {
     "node": ">=0.10.0"
