--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
 node_js:
-  - '0.10'
+  - "0.10"
 rvm:
-  - '2.0.0'
+  - "2.0.0"
 before_install:
-  - 'npm install -g bower'
-  - 'gem install bundler'
-before_script:
-  - 'npm install -g grunt-cli'
+  - "npm install -g bower"
+  - "npm install -g grunt-cli"
+  - "gem install bundler"
