--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "grunt-usemin": "~2.0.0",
     "grunt-push-release": "~0.1.1",
     "grunt-conventional-changelog": "~1.0.0",
-    "grunt-csso": "~0.5.0"
+    "grunt-csso": "~0.5.0",
+    "grunt-text-replace": "~0.3.11"
   },
   "engines": {
     "node": ">=0.10.0"
