--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ghostium",
+  "name": "Ghostium",
   "version": "2.1.1",
   "description": "A Ghost theme focused on content based on Medium design/ux",
   "url": "http://ghostium.oswaldoacauan.com/",
