feat(js): Replace NProgress with Pace. Closes #42

--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,8 @@
   "devDependencies": {
     "fastclick": "~0.6.10",
     "font-awesome": "~4.1.0",
-    "jquery-pjax": "~1.7.3",
-    "nprogress": "~0.1.2",
-    "prism": "gh-pages"
+    "prism": "gh-pages",
+    "pace": "~0.5.1",
+    "jquery-pjax": "master"
   }
 }
