Grunt watch task

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-sass": "~0.5.0",
     "grunt-contrib-uglify": "~0.2.4",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-csscss": "~0.6.1",
     "grunt-svgmin": "~0.2.0",
