--- a/.jshintrc
+++ b/.jshintrc
@@ -1,23 +1,21 @@
 {
   "node": true,
-  "browser": true,
   "esnext": true,
-  "bitwise": false,
-  "curly": false,
+  "bitwise": true,
+  "camelcase": true,
+  "curly": true,
   "eqeqeq": true,
-  "eqnull": true,
   "immed": true,
+  "indent": 2,
   "latedef": true,
   "newcap": true,
   "noarg": true,
   "quotmark": "single",
+  "regexp": true,
   "undef": true,
-  "strict": false,
+  "unused": true,
+  "strict": true,
   "trailing": true,
   "smarttabs": true,
-  "globals": {
-    "$": false,
-    "jQuery": false,
-    "Modernizr": false
-  }
+  "white": true
 }
