--- a/bower.json
+++ b/bower.json
@@ -1,27 +1,22 @@
 {
-  "name": "Ghostium",
-  "version": "2.2.1",
-  "dependencies": {
-    "modernizr": "~2.6.2",
-    "jquery": "~2.0.3"
-  },
-  "homepage": "http://ghostium.oswaldoacauan.com/",
+  "name": "mojo",
+  "version": "0.0.1",
   "authors": [
-    "Oswaldo Acauan <hello@oswaldoacauan.com>"
+    "Peter Kaleta <mail@peterkaleta.com>"
   ],
-  "description": "A Ghost theme focused on content based on Medium design/ux",
+  "description": "My private template",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "ignore": [
     "**/.*",
     "node_modules",
-    "src/assets/_components"
+    "bower_components",
+    "test",
+    "tests"
   ],
-  "devDependencies": {
-    "fastclick": "~0.6.10",
-    "font-awesome": "~4.1.0",
-    "prism": "gh-pages",
-    "pace": "~0.5.1",
-    "jquery-pjax": "master"
+  "dependencies": {
+    "normalize-css": "~3.0.0",
+    "modernizr": "~2.7.2",
+    "fontawesome": "~4.3.0"
   }
 }
