--- a/package.json
+++ b/package.json
@@ -25,28 +25,28 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "matchdep": "~0.3.0",
-    "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-csslint": "~0.1.2",
-    "grunt-contrib-cssmin": "~0.6.2",
-    "grunt-contrib-imagemin": "~0.3.0",
-    "grunt-contrib-jshint": "~0.7.0",
-    "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-uglify": "~0.2.4",
-    "grunt-autoprefixer": "~0.4.0",
-    "grunt-csscss": "~0.6.1",
-    "grunt-svgmin": "~0.2.0",
-    "grunt-usemin": "~2.0.0",
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "~3.0.3",
+    "grunt-contrib-clean": "~0.7.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-copy": "~0.8.2",
+    "grunt-contrib-csslint": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.14.0",
+    "grunt-contrib-imagemin": "~1.0.0",
+    "grunt-contrib-jshint": "~0.12.0",
+    "grunt-contrib-sass": "~0.9.2",
+    "grunt-contrib-uglify": "~0.11.0",
+    "grunt-conventional-changelog": "~5.0.0",
+    "grunt-csscss": "~0.6.2",
+    "grunt-csso": "~0.8.1",
     "grunt-push-release": "~0.1.1",
-    "grunt-conventional-changelog": "~1.0.0",
-    "grunt-csso": "~0.5.0",
-    "grunt-text-replace": "~0.3.11"
+    "grunt-svgmin": "~3.1.2",
+    "grunt-text-replace": "~0.4.0",
+    "grunt-usemin": "~3.1.1",
+    "matchdep": "~1.0.0"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=0.10.40 <5.0"
   },
   "scripts": {
     "test": "grunt --verbose",
