--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,6 @@
 {
   "name": "Ghostium",
   "version": "2.2.1",
-  "dependencies": {
-    "modernizr": "~2.6.2",
-    "jquery": "~2.0.3"
-  },
   "homepage": "http://ghostium.oswaldoacauan.com/",
   "authors": [
     "Oswaldo Acauan <hello@oswaldoacauan.com>"
@@ -17,11 +13,10 @@
     "node_modules",
     "src/assets/_components"
   ],
+  "dependencies": {},
   "devDependencies": {
-    "fastclick": "~0.6.10",
-    "font-awesome": "~4.1.0",
-    "prism": "gh-pages",
-    "pace": "~0.5.1",
-    "jquery-pjax": "master"
+    "fastclick": "~1.0.6",
+    "jquery-pjax": "~1.9.6",
+    "prism": "~1.3.0"
   }
 }
