Add instructions for building zip from source

--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   },
   "scripts": {
     "test": "grunt --verbose",
-    "postinstall": "bundle install && bower install"
+    "postinstall": "bundle install && bower install",
+    "build": "grunt build",
+    "zip": "cd build; zip -r ../ghostium.zip ./*"
   }
 }
